lab1/Test/L1-A-13-1.output
Error Type B at Line 4
Error Type B at Line 5
Error Type B at Line 7
Error Type B at Line 9
Error Type A at Line 11
Error Type B at Line 13
Error Type B at Line 16
Error Type B at Line 35
Error Type A at Line 40
Error Type A at Line 43
Error Type A at Line 45
Error Type A at Line 53
